kong-tutorial/kong/00-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grade-submission
 namespace: grade-demo
 annotations:
   konghq.com/strip-path: "false" #removes the path url. for example /api/kong would be /kong
   konghq.com/plugins: grade-auth, grade-ratelimit
   kubernetes.io/ingress.class: kong
   konghq.com/methods: "GET, POST"  
spec:
 ingressClassName: kong
 rules:
   - http:
       paths:
         - path: /grades
           pathType: Prefix
           backend:
             service:
               name: grade-submission-api
               port:
                 number: 3000
